testing/2_functional/invalidRequestBody/v1.2.2/Dataprovider/mwdi+diagram.invalidRequestBody.noReqBody.dataprovider.plantuml
@startuml mwdi+diagram.invalidRequestBody.noReqBody.dataprovider
skinparam responseMessageBelowArrow true

title
mwdi+testcase.invalidRequestBody.noReqBody.dataprovider
end title

participant "Postman" as Postman
participant "Data" as Data
participant "Collection" as Collection

participant "/v1/provide-list-of-connected-devices" as PLOCD
participant "/v1/provide-list-of-link-ports" as PLOLP
participant "/v1/provide-data-of-all-link-ports" as PDOALP
group Preparation
  Data --\\o Postman : {servers}
  activate Postman
  Postman --\\o Collection : {servers}
end

group /v1/provide-list-of-connected-devices
  Collection --\\o Postman : {servers}
  Postman -> PLOCD : {dummyRequestBody}
  Postman <-- PLOCD : 200
  note right Postman #Orange
    responseCode validation (200?)
  end note
end

group /v1/provide-list-of-link-ports
  Collection --\\o Postman : {servers}
  Postman -> PLOLP : {dummyRequestBody}
  Postman <-- PLOLP : 200
  note right Postman #Orange
    responseCode validation (200?)
  end note
end

group /v1/provide-data-of-all-link-ports
  Collection --\\o Postman : {servers}
  Postman -> PDOALP : {dummyRequestBody}
  Postman <-- PDOALP : 200
  note right Postman #Orange
    responseCode validation (200?)
  end note
end

deactivate Postman

@enduml
